API endpoint for making reservations

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/EmployeeMealPackages/Add.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/EmployeeMealPackages/Add.cshtml
@@ -62,7 +62,9 @@
 				}
 			</tbody>
 		</table>
+		<br />
+		<h6>De bovenstaande maaltijden zijn een voorbeeld van de inhoud van het maaltijdpakket, de daadwerkelijke inhoud kan afwijken.</h6>
 
-		<button>Voeg toe</button>
+		<button class="btn btn-lg btn-primary">Voeg toe</button>
 	</form>
 }
