--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Meals/Add.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Meals/Add.cshtml
@@ -25,6 +25,6 @@
 		<span asp-validation-for="Photo"></span>
 		<br />
 
-		<button>Voeg toe</button>
+		<button class="btn btn-lg btn-primary">Voeg toe</button>
 	</form>
 }
