Improve UX and make swagger visible

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/EmployeeMealPackages/Details.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/EmployeeMealPackages/Details.cshtml
@@ -23,31 +23,34 @@
 		<input type="hidden" asp-for="CanteenId" />
 
 		<!-- name -->
-		<label asp-for="Name">Naam:</label>
-		<input asp-for="Name" />
-		<span asp-validation-for="Name"></span>
-		<br />
+		<div class="form-group">
+			<label asp-for="Name">Naam</label>
+			<input asp-for="Name" class="form-control" />
+			<span asp-validation-for="Name"></span>
+		</div>
 
 		<!-- price -->
-		<label asp-for="Price">Prijs: €</label>
-		<input asp-for="Price" type="number" min="0.01" max="9999.99" step="0.01" />
-		<span asp-validation-for="Price"></span>
-		<br />
+		<div class="form-group">
+			<label asp-for="Price">Prijs (euro's)</label>
+			<input asp-for="Price" type="number" min="0.01" max="9999.99" step="0.01" class="form-control" />
+			<span asp-validation-for="Price"></span>
+		</div>
 
 		<!-- meal package type -->
-		@if (Model.CanteenOffersHotMeals)
-		{
-			<label asp-for="MealPackageType">Type maaltijdpakket:</label>
-			<select asp-for="MealPackageType" asp-items="Html.GetEnumSelectList<MealPackageType>()"></select>
-		}
-		else
-		{
-			<label asp-for="MealPackageType">Type maaltijdpakket (deze kantine biedt geen warme maaltijden aan):</label>
-			<!-- canteen offers no hot meals, so remove HotMeal from the dropdown (the value inside the dropdown is a string version of the enum int value) -->
-			<select asp-for="MealPackageType" asp-items="Html.GetEnumSelectList<MealPackageType>().Where(x => x.Value != ((int)MealPackageType.HotMeal).ToString())"></select>
-		}
-		<span asp-validation-for="MealPackageType"></span>
-		<br />
+		<div class="form-group">
+			@if (Model.CanteenOffersHotMeals)
+			{
+				<label asp-for="MealPackageType">Type maaltijdpakket:</label>
+				<select asp-for="MealPackageType" asp-items="Html.GetEnumSelectList<MealPackageType>()" class="form-control"></select>
+			}
+			else
+			{
+				<label asp-for="MealPackageType">Type maaltijdpakket (deze kantine biedt geen warme maaltijden aan):</label>
+				<!-- canteen offers no hot meals, so remove HotMeal from the dropdown (the value inside the dropdown is a string version of the enum int value) -->
+				<select asp-for="MealPackageType" asp-items="Html.GetEnumSelectList<MealPackageType>().Where(x => x.Value != ((int)MealPackageType.HotMeal).ToString())" class="form-control"></select>
+			}
+			<span asp-validation-for="MealPackageType"></span>
+		</div>
 
 		<!-- pickup deadline -->
 		@{
@@ -56,13 +59,16 @@
 			var minValue = now.AddMinutes(5).ToString("yyyy-MM-ddTHH:mm"); // add five minutes for better user experience (otherwise, pickup deadline could be in the past when user submits form)
 			var maxValue = now.AddHours(48).ToString("yyyy-MM-ddTHH:mm");
 		}
-		<label asp-for="PickupDeadline">Deadline:</label>
-		<input asp-for="PickupDeadline" min="@minValue" max="@maxValue" value="@Model.PickupDeadline!.Value.ToString("yyyy-MM-ddTHH:mm")" type="datetime-local" />
-		<span asp-validation-for="PickupDeadline"></span>
-		<br />
+		<div class="form-group">
+			<label asp-for="PickupDeadline">Deadline:</label>
+			<input asp-for="PickupDeadline" min="@minValue" max="@maxValue" value="@maxValue" type="datetime-local" class="form-control" />
+			<span asp-validation-for="PickupDeadline"></span>
+		</div>
 
 		<!-- meals to add to the meal package -->
-		<table>
+		<br />
+		<h3>Voorbeeldmaaltijden:</h3>
+		<table class="table">
 			<thead>
 				<tr>
 					<th>Foto   </th>
@@ -98,6 +104,7 @@
 	</form>
 	@if (!Model.HasReservation && Model.MatchesCanteen(employeeCanteenId))
 	{
+		<br />
 		<form asp-action="Remove" method="post">
 			<input type="hidden" asp-for="Id" />
 			<button class="btn btn-lg btn-danger">Verwijder</button>
