--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Meals/Index.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Meals/Index.cshtml
@@ -4,6 +4,8 @@
 
 <a asp-area="" asp-controller="Meals" asp-action="Add">Voeg maaltijd toe</a>
 <h1>Maaltijden</h1>
+<h6>Deze maaltijden worden toegevoegd aan de maaltijdpakketten als voorbeeld van de inhoud.</h6>
+<br />
 @foreach (var meal in Model)
 {
     <h3>Naam: @meal.Name</h3>
